# Brink

./: .env.example  .gitattributes  .gitignore  .gitleaks.toml  AGENTS.md  CLAUDE.md  June_11_testing.ipynb  README.md  jest.config.cjs  package-lock.json  package.json  render.yaml  tsconfig.json  vercel.json
analytics/: cluster.py  db.py  ingest_kaggle.py  pyproject.toml  seed_users.py
analytics/tests/: test_cluster.py  test_db.py  test_ingest_kaggle.py  test_seed_users.py
backend/: alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 3978f11ad4da_artist_engagement_tables_t52.py  a1c47f9e2b30_add_user_bio_t48.py  bfb2538c1d89_add_ratelimithit_table_t10.py  c2a629aaeb84_baseline_prisma_schema_t05.py  d3f9a1c05b27_analytics_contract_medallion_t39.py  f4a2d81c96e0_add_reaction_created_at_t96.py  fe4e66a13f08_text_only_posts_nullable_trackid_.py
backend/app/: config.py  db.py  deps.py  main.py  models.py  rate_limit.py  responses.py  schemas.py  spotify.py  stats.py  tracks.py
backend/app/routers/: artist.py  auth.py  comments.py  feed.py  follow.py  health.py  me.py  now_playing.py  pages.py  posts.py  reactions.py  search.py  snapshot.py  users.py
backend/app/security/: crypto.py  session.py  supabase.py
backend/app/static/: artist-engagement.js  artist-upload.js  become-artist.js  brink.css  comments.js  composer.js  double-tap.js  edit-profile.js  (+6 more)
backend/tests/: conftest.py  test_alembic_env.py  test_api_surface.py  test_artist.py  test_artist_engagement.py  test_auth.py  test_auth_email.py  test_auth_login.py  test_comments.py  test_config.py  test_crypto.py  test_feed.py  test_follow.py  test_health.py  test_main.py  test_me.py  test_models.py  test_now_playing.py  test_pages.py  test_posts.py  test_rate_limit.py  test_reactions.py  test_search.py  test_snapshot.py  test_spotify.py  test_stats.py  test_supabase_signing.py  test_tracks.py  test_users_follow_lists.py  test_users_search.py
(+239 files in other folders)
